--- a/.github/workflows/build.typescript.yml
+++ b/.github/workflows/build.typescript.yml
@@ -2,14 +2,6 @@ name: Build
 on:
   workflow_call:
     inputs:
-      # build_artifact_folder:
-      #   required: false
-      #   type: string
-      #   default: 'dist'
-      # build_artifact_name:
-      #   required: false
-      #   type: string
-      #   default: 'dist'
       package_manager:
         required: false
         type: string
@@ -22,36 +14,17 @@ on:
         required: false
         type: string
         default: 'lint'
-      # test_command:
-      #   required: false
-      #   type: string
-      #   default: 'test'
-      # version_command:
-      #   required: false
-      #   type: string
-      #   default: 'semantic-release'
       node_version:
         required: false
         type: string
         default: 'latest'
-      # packr_command:
-      #   required: false
-      #   type: string
-      #   default: ''
-      # coverage_artifact_folder:
-      #   required: false
-      #   type: string
-      #   default: 'coverage/lcov.info'
-      # coverage_artifact_name:
-      #   required: false
-      #   type: string
-      #   default: 'code-coverage-report'
       cypress_bin_path:
         required: false
         type: string
         default: '~/.cache/Cypress'
 jobs:
   labeler:
+    name: Label branch
     runs-on: ubuntu-latest
     if: github.event_name == 'pull_request'
     permissions:
@@ -65,6 +38,7 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
   compile:
+    name: Compile source
     runs-on: ubuntu-latest
     env:
       CLI_INSTALL:
@@ -127,32 +101,3 @@ jobs:
           path: ${{ inputs.cypress_bin_path }}
           key: cypress-${{ runner.os }}
           restore-keys: cypress-${{ runner.os }}
-
-      # - name: Run unit tests
-      #   run: ${{ env.CLI_TEST_UNIT }}
-
-      # - name: Update semantic version
-      #   env:
-      #     GITHUB_TOKEN: ${{ secrets.GHA_PAT_PRIVATE || secrets.GHA_PAT || secrets.GITHUB_TOKEN }}
-      #   run: ${{ env.CLI_VERSION }}
-
-      # - name: Packr
-      #   if: ${{ inputs.packr_command != '' }}
-      #   run: ${{ env.CLI_PACKR }}
-
-      # - name: Upload build artifacts
-      #   if: ${{ inputs.build_artifact_folder != ''}}
-      #   uses: actions/upload-artifact@v3
-      #   with:
-      #     name: ${{ inputs.build_artifact_name }}
-      #     path: ${{ inputs.build_artifact_folder }}
-      #     retention-days: 1
-      #     if-no-files-found: error
-
-      # - name: Upload unit test coverage artifacts
-      #   if: ${{ inputs.coverage_artifact_folder != ''}}
-      #   uses: actions/upload-artifact@v3
-      #   with:
-      #     name: ${{ inputs.coverage_artifact_name }}
-      #     path: ${{ inputs.coverage_artifact_folder }}
-      #     retention-days: 1
