--- a/.github/workflows/deploy.netlify.yml
+++ b/.github/workflows/deploy.netlify.yml
@@ -19,6 +19,9 @@ env:
   GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
   NETLIFY_SITE_ID: ${{ secrets.NETLIFY_SITE_ID }}
   NETLIFY_PROD:
+  NETLIFY_OUTPUT:
+  NETLIFY_DEPLOY_URL:
+  NETLIFY_PROD_URL:
 
 jobs:
   deploy:
@@ -26,8 +29,8 @@ jobs:
     runs-on: ubuntu-latest
     outputs:
       netlify_output: ${{ env.NETLIFY_OUTPUT }}
-      deploy_url: ${{ env.DEPLOY_URL }}
-      prod_url: ${{ env.PROD_URL }}
+      deploy_url: ${{ env.NETLIFY_DEPLOY_URL }}
+      prod_url: ${{ env.NETLIFY_PROD_URL }}
     steps:
       - name: Is production deployment
         if: inputs.is_prod == true
@@ -50,8 +53,8 @@ jobs:
         id: netlify_output
         run: |
           echo "NETLIFY_OUTPUT=${{ steps.netlify_deploy.outputs.netlify_output }}" >> $GITHUB_ENV
-          echo "DEPLOY_URL=${{ steps.netlify_deploy.outputs.deploy_url }}" >> $GITHUB_ENV
-          echo "PROD_URL=${{ steps.netlify_deploy.outputs.deploy_url }}" >> $GITHUB_ENV
+          echo "NETLIFY_DEPLOY_URL=${{ steps.netlify_deploy.outputs.deploy_url }}" >> $GITHUB_ENV
+          echo "NETLIFY_PROD_URL=${{ steps.netlify_deploy.outputs.deploy_url }}" >> $GITHUB_ENV
 
       - name: Comment on PR
         if: github.event_name == 'pull_request'
