--- a/.github/workflows/deploy.netlify.yml
+++ b/.github/workflows/deploy.netlify.yml
@@ -10,12 +10,12 @@ on:
         required: false
         type: string
         default: dist
-      is_prod:
+      is_alias:
         required: false
         type: boolean
-        default: false
+        default: true
       environment:
-        required: false
+        required: true
         type: string
     outputs:
       netlify_output:
@@ -31,7 +31,7 @@ env:
   NETLIFY_AUTH_TOKEN: ${{ secrets.NETLIFY_AUTH_TOKEN }}
   GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
   NETLIFY_SITE_ID: ${{ secrets.NETLIFY_SITE_ID }}
-  NETLIFY_PROD:
+  NETLIFY_PROD: ${{ inputs.is_alias != 'true' && '--prod' || '' }}
 
 jobs:
   deploy:
@@ -43,9 +43,9 @@ jobs:
       netlify_deploy_url: ${{ steps.netlify_deploy.outputs.netlify_deploy_url }}
       netlify_prod_url: ${{ steps.netlify_deploy.outputs.netlify_prod_url }}
     steps:
-      - name: Is production deployment
-        if: inputs.is_prod == true
-        run: echo "NETLIFY_PROD=--prod" >> $GITHUB_ENV
+      # - name: alias deployment
+      #   if: inputs.is_alias != true
+      #   run: echo "NETLIFY_PROD=--prod" >> $GITHUB_ENV
 
       - name: Retrieve build artifacts
         uses: actions/download-artifact@v3
