--- a/.github/workflows/deploy.netlify.yml
+++ b/.github/workflows/deploy.netlify.yml
@@ -31,7 +31,7 @@ env:
   NETLIFY_AUTH_TOKEN: ${{ secrets.NETLIFY_AUTH_TOKEN }}
   GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
   NETLIFY_SITE_ID: ${{ secrets.NETLIFY_SITE_ID }}
-  NETLIFY_PROD: ${{ inputs.is_alias != 'true' && '--prod' || '' }}
+  NETLIFY_PROD: ${{ inputs.is_alias == false && '--prod' || '' }}
 
 jobs:
   deploy:
