--- a/.github/workflows/deploy.netlify.yml
+++ b/.github/workflows/deploy.netlify.yml
@@ -31,7 +31,7 @@ env:
   NETLIFY_AUTH_TOKEN: ${{ secrets.NETLIFY_AUTH_TOKEN }}
   GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
   NETLIFY_SITE_ID: ${{ secrets.NETLIFY_SITE_ID }}
-  NETLIFY_PROD: ${{ inputs.is_alias == false && '--prod' || '' }}
+  NETLIFY_PROD:
 
 jobs:
   deploy:
@@ -43,9 +43,8 @@ jobs:
       netlify_deploy_url: ${{ steps.netlify_deploy.outputs.netlify_deploy_url }}
       netlify_prod_url: ${{ steps.netlify_deploy.outputs.netlify_prod_url }}
     steps:
-      # - name: alias deployment
-      #   if: inputs.is_alias != true
-      #   run: echo "NETLIFY_PROD=--prod" >> $GITHUB_ENV
+      - if: inputs.is_alias != true
+        run: echo "NETLIFY_PROD=--prod" >> $GITHUB_ENV
 
       - name: Retrieve build artifacts
         uses: actions/download-artifact@v3
