--- a/.github/workflows/build.typescript.yml
+++ b/.github/workflows/build.typescript.yml
@@ -22,6 +22,10 @@ on:
         required: false
         type: string
         default: '~/.cache/Cypress'
+      environment:
+        required: false
+        type: string
+        default: 'dev'
 jobs:
   labeler:
     name: Label branch
@@ -113,7 +117,7 @@ jobs:
         uses: actions/cache@v3
         with:
           path: ./*
-          key: build-cache-${{ github.sha }}
+          key: build-cache-${{ github.sha }}-${{ inputs.environment }}
 
       - name: Upload cypress binary cache
         uses: actions/cache@v3
