--- a/.github/workflows/test.unit.typescript.yml
+++ b/.github/workflows/test.unit.typescript.yml
@@ -18,6 +18,10 @@ on:
         required: false
         type: string
         default: 'code-coverage-report'
+      environment:
+        required: false
+        type: string
+        default: 'dev'
 
 env:
   CLI_TEST: yarn ${{ inputs.test_command }}
@@ -36,7 +40,7 @@ jobs:
         uses: actions/cache/restore@v3
         with:
           path: ./*
-          key: build-cache-${{ github.sha }}
+          key: build-cache-${{ github.sha }}-${{ inputs.environment }}
           fail-on-cache-miss: true
 
       - name: Run tests
