--- a/.github/workflows/build.typescript.yml
+++ b/.github/workflows/build.typescript.yml
@@ -22,10 +22,7 @@ on:
         required: false
         type: string
         default: '~/.cache/Cypress'
-      environment:
-        required: false
-        type: string
-        default: 'dev'
+
 jobs:
   labeler:
     name: Label branch
@@ -117,7 +114,7 @@ jobs:
         uses: actions/cache@v3
         with:
           path: ./*
-          key: build-cache-${{ github.sha }}-${{ inputs.environment }}
+          key: build-cache-${{ github.sha }}
 
       - name: Upload cypress binary cache
         uses: actions/cache@v3
