--- a/.github/workflows/test.unit.typescript.yml
+++ b/.github/workflows/test.unit.typescript.yml
@@ -18,10 +18,6 @@ on:
         required: false
         type: string
         default: 'code-coverage-report'
-      environment:
-        required: false
-        type: string
-        default: 'dev'
 
 env:
   CLI_TEST: yarn ${{ inputs.test_command }}
@@ -40,7 +36,7 @@ jobs:
         uses: actions/cache/restore@v3
         with:
           path: ./*
-          key: build-cache-${{ github.sha }}-${{ inputs.environment }}
+          key: build-cache-${{ github.sha }}
           fail-on-cache-miss: true
 
       - name: Run tests
