--- a/.github/workflows/deploy.npm.yml
+++ b/.github/workflows/deploy.npm.yml
@@ -26,6 +26,10 @@ on:
         required: false
         type: string
         default: 'latest'
+      registry-url:
+        required: false
+        type: string
+        default: 'https://registry.npmjs.org'
 
 env:
   NODE_AUTH_TOKEN: ${{ secrets.NODE_AUTH_TOKEN }}
@@ -55,7 +59,7 @@ jobs:
       - name: Setup Node ${{ inputs.node_version }} with cache
         uses: actions/setup-node@v3
         with:
-          registry-url: 'https://registry.npmjs.org'
+          registry-url: ${{ inputs.registry-url }}
           always-auth: true
           node-version: ${{ inputs.node_version }}
           cache: ${{ inputs.package_manager }}
