--- a/.github/workflows/deploy.npm.yml
+++ b/.github/workflows/deploy.npm.yml
@@ -30,9 +30,12 @@ on:
         required: false
         type: string
         default: 'https://registry.npmjs.org'
-
+        description: The package registry to use. Defaults to 'https://registry.npmjs.org'
+    secrets:
+      AUTH_TOKEN:
+        required: false
 env:
-  NODE_AUTH_TOKEN: ${{ secrets.NODE_AUTH_TOKEN }}
+  NODE_AUTH_TOKEN: ${{ secrets.AUTH_TOKEN || secrets.NODE_AUTH_TOKEN }}
 
 jobs:
   deploy:
