--- a/.github/workflows/deploy.npm.yml
+++ b/.github/workflows/deploy.npm.yml
@@ -36,6 +36,7 @@ on:
         required: true
 env:
   NODE_AUTH_TOKEN: ${{ secrets.NODE_AUTH_TOKEN }}
+  CLI_PUBLISH:
 
 jobs:
   deploy:
@@ -43,15 +44,11 @@ jobs:
     steps:
       - name: Create environment variables for yarn commands
         if: inputs.package_manager == 'yarn'
-        run: |
-          echo "CLI_INSTALL=yarn install --frozen-lockfile" >> $GITHUB_ENV
-          echo "CLI_PUBLISH=yarn publish --access ${{ inputs.package_visibility }} --tag ${{ inputs.tag }}" >> $GITHUB_ENV
+        run: echo "CLI_PUBLISH=yarn publish --access ${{ inputs.package_visibility }} --tag ${{ inputs.tag }}" >> $GITHUB_ENV
 
       - name: Create environment variables for npm commands
         if: inputs.package_manager == 'npm'
-        run: |
-          echo "CLI_INSTALL=npm ci" >> $GITHUB_ENV
-          echo "CLI_PUBLISH=npm publish --access ${{ inputs.package_visibility }} --tag ${{ inputs.tag }}" >> $GITHUB_ENV
+        run: echo "CLI_PUBLISH=npm publish --access ${{ inputs.package_visibility }} --tag ${{ inputs.tag }}" >> $GITHUB_ENV
 
       - name: Retrieve build artifacts
         uses: actions/download-artifact@v3
@@ -69,7 +66,7 @@ jobs:
 
       - name: Initialize github package registry settings
         if: inputs.registry-url == 'https://npm.pkg.github.com'
-        run: echo "//npm.pkg.github.com/:_authToken=${{ secrets.NODE_AUTH_TOKEN }}" > .npmrc
+        run: echo "//npm.pkg.github.com/:_authToken=${{ secrets.NODE_AUTH_TOKEN }}" >> .npmrc
 
         # reference: https://stackoverflow.com/questions/54310050/how-to-version-build-artifacts-using-github-actions
       - name: beta - version value from package.json
@@ -77,9 +74,6 @@ jobs:
         run: |
           npm i -g json
           json -I -f package.json -e "this.version=\"$(json -f package.json | json version)-beta.${{ github.run_number }}\""
-       
-      # - name: Install dependencies
-      #   run: ${{ env.CLI_INSTALL }}
 
       - name: Publish
         run: ${{ env.CLI_PUBLISH }}
