--- a/.github/workflows/deploy.npm.yml
+++ b/.github/workflows/deploy.npm.yml
@@ -63,17 +63,13 @@ jobs:
           always-auth: true
           node-version: ${{ inputs.node_version }}
           cache: ${{ inputs.package_manager }}
-
-      - run: cat .npmrc
-      
-      - name: Initialize github package registry settings
-        if: inputs.registry-url == 'https://npm.pkg.github.com'
-        run: |
-          echo "//npm.pkg.github.com/:_authToken=${{ secrets.NODE_AUTH_TOKEN }}" > .npmrc
-          echo "@flexbase-eng:registry=https://npm.pkg.github.com" >> .npmrc
-          echo "always-auth=true" >> .npmrc
-
-      - run: cat .npmrc
+    
+      # - name: Initialize github package registry settings
+      #   if: inputs.registry-url == 'https://npm.pkg.github.com'
+      #   run: |
+      #     echo "//npm.pkg.github.com/:_authToken=${{ secrets.NODE_AUTH_TOKEN }}" > .npmrc
+      #     echo "@flexbase-eng:registry=https://npm.pkg.github.com" >> .npmrc
+      #     echo "always-auth=true" >> .npmrc
 
         # reference: https://stackoverflow.com/questions/54310050/how-to-version-build-artifacts-using-github-actions
       - name: beta - version value from package.json
