--- a/.github/workflows/deploy.npm.yml
+++ b/.github/workflows/deploy.npm.yml
@@ -66,10 +66,12 @@ jobs:
     
       - name: Initialize github package registry settings
         if: inputs.registry-url == 'https://npm.pkg.github.com'
+        env:
+          NODE_AUTH_TOKEN: ${{ secrets.NODE_AUTH_TOKEN }}
         run: |
-          echo "//npm.pkg.github.com/:_authToken=${{ secrets.NODE_AUTH_TOKEN }}" > .npmrc
-          echo "@flexbase-eng:registry=https://npm.pkg.github.com" >> .npmrc
+          echo "@flexbase-eng:registry=https://npm.pkg.github.com" > .npmrc
           echo "always-auth=true" >> .npmrc
+          echo "//npm.pkg.github.com/:_authToken=${NODE_AUTH_TOKEN}" >> .npmrc
 
         # reference: https://stackoverflow.com/questions/54310050/how-to-version-build-artifacts-using-github-actions
       - name: beta - version value from package.json
