--- a/.github/workflows/deploy.npm.yml
+++ b/.github/workflows/deploy.npm.yml
@@ -68,10 +68,7 @@ jobs:
         if: inputs.registry-url == 'https://npm.pkg.github.com'
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NODE_AUTH_TOKEN }}
-        run: |
-          echo "//npm.pkg.github.com/:_authToken=${NODE_AUTH_TOKEN}" >> .npmrc
-          echo "@flexbase:registry=https://npm.pkg.github.com" >> .npmrc
-          echo "always-auth=true" >> .npmrc
+        run: echo "@flexbase:registry=https://npm.pkg.github.com" >> .npmrc
           
       - run: cat .npmrc
 
