--- a/.github/workflows/coverage.sonarcloud.yml
+++ b/.github/workflows/coverage.sonarcloud.yml
@@ -18,6 +18,14 @@ on:
         required: false
         type: string
         default: 'coverage/lcov.info'
+      src_path:
+        required: false
+        type: string
+        default: './src/'
+      test_path:
+        required: false
+        type: string
+        default: './tests/'
 
 env:
   SONAR_ORG: flexbase
@@ -49,3 +57,5 @@ jobs:
             -Dsonar.organization=${{ env.SONAR_ORG }}
             -Dsonar.projectKey=${{ env.SONAR_PROJECT_KEY }}
             -Dsonar.javascript.lcov.reportPaths=${{ inputs.js_report_path }}
+            -Dsonar.sources=${{inputs.src_path}}
+            -Dsonar.tests=${{inputs.test_path}}
