--- a/.github/workflows/deploy.netlify.yml
+++ b/.github/workflows/deploy.netlify.yml
@@ -61,7 +61,7 @@ jobs:
           body-includes: 'Deployed to'
           comment-author: 'github-actions[bot]'
 
-      - if: steps.lookup.outputs.comment-body != ''
+      - if: steps.lookup.outputs.comment-id == 0
         run: echo ${{steps.lookup.outputs.comment-body}} | sed -n 's/.*https:\/\/\(.*\)--.*/NETLIFY_ALIAS=--alias \1/p' >> $GITHUB_ENV
 
       - name: Deploy to Netlify
