--- a/.github/workflows/test.unit.typescript.yml
+++ b/.github/workflows/test.unit.typescript.yml
@@ -73,7 +73,7 @@ jobs:
         if: ${{ inputs.use_go_migrate == true }}
         run: |
           curl -L https://github.com/golang-migrate/migrate/releases/download/v4.15.2/migrate.linux-amd64.tar.gz | tar xvz
-          sudo mv migrate.linux-amd64 /usr/bin/migrate
+          sudo mv migrate.linux-amd64/migrate /usr/bin/migrate
           which migrate
 
       - name: Run tests
