--- a/.github/workflows/package.typescript.yml
+++ b/.github/workflows/package.typescript.yml
@@ -34,6 +34,10 @@ on:
         required: false
         type: string
         default: ''
+      env_file_data_format:
+        required: false
+        type: string
+        default: 'dotenv'
       env_file_format:
         required: false
         type: string
@@ -81,6 +85,7 @@ jobs:
           file_name: ${{ inputs.env_file_name }}
           file_path: ${{ inputs.env_file_path }}
           file_data: ${{ inputs.env_file_data }}
+          file_data_format: ${{ inputs.env_file_data_format }}
           file_format: ${{ inputs.env_file_format }}
 
       - name: Packr
