--- a/.github/workflows/build.typescript.yml
+++ b/.github/workflows/build.typescript.yml
@@ -40,7 +40,8 @@ jobs:
 
   compile:
     name: Compile source
-    runs-on: ubuntu-latest
+    runs-on:
+      labels: high-memory
     env:
       CLI_INSTALL:
       CLI_BUILD:
