--- a/.github/workflows/build.typescript.yml
+++ b/.github/workflows/build.typescript.yml
@@ -43,6 +43,7 @@ jobs:
     runs-on:
       labels: high-memory
     env:
+      NODE_OPTIONS: "--max_old_space_size=8192"
       CLI_INSTALL:
       CLI_BUILD:
       CLI_LINT:
