--- a/.github/workflows/build.typescript.yml
+++ b/.github/workflows/build.typescript.yml
@@ -115,7 +115,7 @@ jobs:
         uses: actions/cache@v3
         with:
           path: ./*
-          key: build-cache-${{ github.sha }}
+          key: build-cache-${{ github.sha }}-${{ github.run_id }}-${{ github.run_attempt }}
 
       - name: Upload cypress binary cache
         uses: actions/cache@v3
